# unitree_interface

./: .gitignore  README.md  pyproject.toml
unitree_interface/: __init__.py  interactive_client_go2.py  localization_plugin_minimal_example.py  measurementhandler.py  motormodel.py  terminalhandler.py  unitreeinterface.py
unitree_interface/localization/: motioncapture_connect_test.py  motioncapture_plugin.py  motioncapture_plugin_test.py
unitree_interface/state_estimation/: ekf.py  test_ekf.py
unitree_interface/utils/: utils.py
utils/mocap_marker_mounts/unitree_go2/: GO2_frontmount.ipt  GO2_frontmount.stl  GO2_frontmount_v2.gcode  GO2_frontmount_v2.ipt  GO2_frontmount_v2.stl  GO2_railmount_marker.gcode  GO2_railmount_marker.ipt  GO2_railmount_marker.stl  GO2_railmount_marker_v2.gcode  GO2_railmount_marker_v2.ipt  GO2_railmount_marker_v2.stl  GO2_railmount_wifidongle.ipt  GO2_railmount_wifidongle.stl
